final cristian fix

--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -154,3 +154,10 @@ howpublished={\url{https://en.wikipedia.org/wiki/Path_explosion}},
   title={{Chatafl GitHub ProFuzzBench}},
   howpublished={\url{https://github.com/ChatAFLndss/ChatAFL/tree/master/benchmark}},
 }
+
+@article{vulndiscover,
+title = {An empirical study of vulnerability discovery methods over the past ten years},
+year = {2022},
+url = {https://www.sciencedirect.com/science/article/pii/S0167404822002115},
+author = {Lei Cui and Jiancong Cui and Zhiyu Hao and Lun Li and Zhenquan Ding and Yongji Liu},
+}
