--- a/latex_thesis/parts/abstract.tex
+++ b/latex_thesis/parts/abstract.tex
@@ -4,5 +4,5 @@
 \end{center}}
 \textit{Fuzzing} is a software testing technique that involves providing invalid, unexpected, or random data as inputs to a computer program. This technique is widely used to identify vulnerabilities in software systems.
 \\The significance of \textit{stateful fuzzing} lies in its ability to identify vulnerabilities in applications characterized by intricate internal states, which may be overlooked by conventional fuzzing techniques.
-\\This thesis compare three stateful fuzzers—\textbf{Fallaway}, \textbf{AFLNet} and \textbf{ChatAFL}—by employing them against \textbf{Lighttpd}, a high-performance web server. This research compares these instruments with regard to \textit{code coverage}, executions and crash detection.
-\\These results provide enlightening insights into the strengths and weaknesses of each fuzzer, hence guiding selection and improvements of stateful fuzzing approaches for modern software systems.
+\\This thesis compare three fuzzers—\textbf{Fallaway}, \textbf{AFLNet} and \textbf{ChatAFL}—by using them against \textbf{Lighttpd}, a high-performance web server. This research compares these instruments with regard to \textit{code coverage}, executions and crash detection.
+\\These results provide enlightening insights into the strengths and weaknesses of each fuzzer, hence guiding selection and improvements of stateful fuzzing approaches for modern software systems. In particular, Fallaway demonstrated substantial effectiveness by achieving broader coverage and more comprehensive exploration, even with its relatively simpler approach, highlighting its suitability for scenarios where a thorough examination of all potential states is crucial.
